Horizontal scrolling issue

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,6 @@ body {
   font-size: 15px;
   height: 100vh;
   color: black;
-  overflow: hidden;
 }
 
 p {
@@ -172,6 +171,7 @@ html {
 .feature-block {
   padding-top: 2.5rem;
   padding-left: .6rem;
+  overflow: hidden;
 }
 
 .feature-block-about {
@@ -278,6 +278,7 @@ html {
 
 .about-wrapper {
   padding: 6rem 0 0 1rem;
+  overflow: hidden;
 }
 
 #div3 {
